修改grid布局为SingularityGS

--- a/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.no-query.css
+++ b/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.no-query.css
@@ -12,313 +12,39 @@ and open the template in the editor.
     Created on : Apr 1, 2015, 10:51:36 AM
     Author     : Stephen
 */
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Apr 10, 2015, 9:44:24 PM
-    Author     : Stephen
-*/
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Apr 2, 2015, 3:49:40 PM
-    Author     : Stephen
-*/
-/* line 1, ../../../sass/base/_media.scss */
-img, media {
-  max-width: 100%; }
-
-/**
- * $FONT-FACE
- */
-/* line 106, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/typography/_vertical_rhythm.scss */
-html {
-  font-size: 87.5%;
-  line-height: 1.42857em; }
-
-/**
- * $BASE-TYPOGRAPHY
- */
-/* line 9, ../../../sass/base/_typography.scss */
-html {
-  font-family: "Microsoft Yahei", Sumsun, Arial;
-  color: #333333; }
-
-/**
- * $LINKS
- */
-/* line 17, ../../../sass/base/_typography.scss */
-a {
-  color: #9a2525;
-  text-decoration: none; }
-  /* line 18, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
-  a:visited {
-    color: #852020; }
-  /* line 21, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
-  a:focus {
-    color: #9a2525; }
-  /* line 24, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
-  a:hover {
-    color: #af2a2a; }
-  /* line 27, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
-  a:active {
-    color: #9a2525; }
-
-/* line 21, ../../../sass/base/_typography.scss */
-a:hover {
-  text-decoration: underline; }
-
-/**
- * $HEADINGS
- */
-/* line 28, ../../../sass/base/_typography.scss */
-h1, .alpha,
-h2, .beta,
-h3, .gamma,
-h4, .delta, .l-region--express .block__title,
-h5, .epsilon,
-h6, .zeta {
-  margin-top: 0em;
-  padding-top: 0em;
-  padding-bottom: 0em;
-  margin-bottom: 0.28571em;
-  color: #9a2525;
-  text-transform: uppercase; }
-  /* line 38, ../../../sass/base/_typography.scss */
-  h1 a,
-  h1 a:visited, .alpha a,
-  .alpha a:visited,
-  h2 a,
-  h2 a:visited, .beta a,
-  .beta a:visited,
-  h3 a,
-  h3 a:visited, .gamma a,
-  .gamma a:visited,
-  h4 a,
-  h4 a:visited, .delta a, .l-region--express .block__title a,
-  .delta a:visited,
-  .l-region--express .block__title a:visited,
-  h5 a,
-  h5 a:visited, .epsilon a,
-  .epsilon a:visited,
-  h6 a,
-  h6 a:visited, .zeta a,
-  .zeta a:visited {
-    color: inherit;
-    text-decoration: none; }
-
-/* line 45, ../../../sass/base/_typography.scss */
-h1, .alpha {
-  font-size: 55px;
-  font-size: 3.92857rem;
-  font-weight: 700; }
-
-/* line 49, ../../../sass/base/_typography.scss */
-h2, .beta {
-  font-size: 34px;
-  font-size: 2.42857rem;
-  font-weight: 700; }
-
-/* line 53, ../../../sass/base/_typography.scss */
-h3, .gamma {
-  font-size: 21px;
-  font-size: 1.5rem; }
-
-/* line 56, ../../../sass/base/_typography.scss */
-h4, .delta, .l-region--express .block__title {
-  font-size: 18px;
-  font-size: 1.28571rem; }
-
-/* line 59, ../../../sass/base/_typography.scss */
-h5, .epsilon {
-  font-size: 16px;
-  font-size: 1.14286rem; }
-
-/* line 62, ../../../sass/base/_typography.scss */
-h6, .zeta {
-  font-size: 16px;
-  font-size: 1.14286rem; }
-
-/**
- * $PARAGRAPHS
- */
-/* line 69, ../../../sass/base/_typography.scss */
-p,
-blockquote {
-  margin: 0;
-  margin-top: 0em;
-  padding-top: 0em;
-  padding-bottom: 0em;
-  margin-bottom: 1.42857em; }
-
-/* line 74, ../../../sass/base/_typography.scss */
-p + img {
-  float: left;
-  margin-right: 1em; }
-
-/**
- * $QUOTES
- */
-/* line 82, ../../../sass/base/_typography.scss */
-blockquote {
-  margin-top: 0em;
-  padding-top: 1.42857em;
-  padding-bottom: 1.42857em;
-  margin-bottom: 1.42857em;
-  padding: 0, 1.5em;
-  border-width: 0.07143em;
-  border-style: solid;
-  padding: 1.35714em;
-  border-left-width: 0.71429em;
-  border-left-style: solid;
-  padding-left: 0.71429em;
-  font-style: italic;
-  color: #852020; }
-  /* line 92, ../../../sass/base/_typography.scss */
-  blockquote p {
-    margin: 0; }
-
-/* line 97, ../../../sass/base/_typography.scss */
-q {
-  font-style: italic; }
-
-/**
- * $MARKS
- */
-/* line 104, ../../../sass/base/_typography.scss */
-mark,
-.marker {
-  padding: 0.1em 0.5em;
-  background: #fbd0d6;
-  color: #ffffff;
-  font-size: 12px;
-  font-size: 0.85714rem;
-  text-transform: capitalize;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  border-radius: 10px; }
-
-/**
- * $FOOTERS
- */
-/* line 120, ../../../sass/base/_typography.scss */
-footer,
-.footer {
-  padding: 20px 0;
-  margin: 0 auto;
-  background: #262626;
-  text-align: center;
-  color: #666666;
-  font-size: 12px;
-  font-size: 0.85714rem; }
-  /* line 131, ../../../sass/base/_typography.scss */
-  footer a,
-  .footer a {
-    color: #666666; }
-
-/**
- * $BARS
- */
-/* line 139, ../../../sass/base/_typography.scss */
-.bar {
-  padding: 0.1em 0.5em;
-  background: #262626;
-  text-align: right;
-  color: #a6a6a6;
-  font-size: 12px;
-  font-size: 0.85714rem; }
-  /* line 148, ../../../sass/base/_typography.scss */
-  .bar a {
-    color: #a6a6a6; }
-    /* line 150, ../../../sass/base/_typography.scss */
-    .bar a:hover {
-      color: #cccccc; }
-
-/**
- * $EXPRESSES
- */
-/* line 159, ../../../sass/base/_typography.scss */
-.l-express {
-  padding: 20px 0; }
-  /* line 162, ../../../sass/base/_typography.scss */
-  .l-express a {
-    color: #333333; }
-    /* line 164, ../../../sass/base/_typography.scss */
-    .l-express a:hover {
-      color: #9a2525; }
-
-/* line 15, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+/* line 13, ../../../sass/layouts/sword-front/sword-front.layout.scss */
 .l-page {
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto; }
-  /* line 12, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/susy-2.2.2/sass/susy/output/support/_clearfix.scss */
+  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Crect%20x%3D%220%25%22%20fill%3D%22chocolate%22%20width%3D%2220%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2220%25%22%20fill%3D%22%23dd8e56%22%20width%3D%226%2E66667%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2226%2E66667%25%22%20fill%3D%22chocolate%22%20width%3D%2220%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2246%2E66667%25%22%20fill%3D%22%23dd8e56%22%20width%3D%226%2E66667%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2253%2E33333%25%22%20fill%3D%22chocolate%22%20width%3D%2220%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2273%2E33333%25%22%20fill%3D%22%23dd8e56%22%20width%3D%226%2E66667%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2280%2E0%25%22%20fill%3D%22chocolate%22%20width%3D%2220%25%22%20height%3D%22100%25%22%2F%3E%3C%2Fsvg%3E");
+  *zoom: 1; }
+  /* line 38, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/utilities/general/_clearfix.scss */
   .l-page:after {
-    content: " ";
-    display: block;
+    content: "";
+    display: table;
     clear: both; }
-  /* line 65, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/susy-2.2.2/sass/susy/language/susy/_background.scss */
-  head {
-    display: block;
-    position: fixed;
-    right: 10px;
-    top: 10px;
-    z-index: 999;
-    color: #333;
-    background: rgba(255, 255, 255, 0.25); }
-  /* line 66, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/susy-2.2.2/sass/susy/language/susy/_background.scss */
-  head:before {
-    content: "|||";
-    display: block;
-    padding: 5px 10px;
-    font-family: sans-serif;
-    font-size: 16px;
-    font-weight: bold; }
-  /* line 67, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/susy-2.2.2/sass/susy/language/susy/_background.scss */
-  head:hover {
-    background: rgba(255, 255, 255, 0.5);
-    color: red; }
-  /* line 71, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/susy-2.2.2/sass/susy/language/susy/_background.scss */
-  head:hover ~ .l-page, head:hover ~ body .l-page {
-    position: relative; }
-    /* line 74, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/susy-2.2.2/sass/susy/language/susy/_background.scss */
-    head:hover ~ .l-page:before, head:hover ~ body .l-page:before {
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      content: " ";
-      z-index: 998; }
 
 /* Bar */
-/* line 54, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+/* line 20, ../../../sass/layouts/sword-front/sword-front.layout.scss */
 .l-region--bar p {
   margin: 0; }
-/* line 57, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+/* line 23, ../../../sass/layouts/sword-front/sword-front.layout.scss */
 .l-region--bar .block__content {
   text-align: right; }
-  /* line 59, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 25, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--bar .block__content span {
     margin: 8px; }
 
 /* Quick links*/
-/* line 67, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+/* line 33, ../../../sass/layouts/sword-front/sword-front.layout.scss */
 .l-region--express .block__title {
+  font-size: 18px;
   border-bottom: 1px dotted #cccccc;
   padding-bottom: 0.5em; }
-/* line 73, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+/* line 39, ../../../sass/layouts/sword-front/sword-front.layout.scss */
 .l-region--express .block__content .field__item {
   display: inline-block;
   padding: 0.8em 0.5em;
   width: 12em; }
-  /* line 78, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 44, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--express .block__content .field__item:before {
     font-family: "FontAwesome";
     content: "\f0da";
@@ -326,16 +52,16 @@ footer,
     color: #9a2525; }
 
 /* Useful links */
-/* line 90, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+/* line 56, ../../../sass/layouts/sword-front/sword-front.layout.scss */
 .l-region--link a {
   color: #a6a6a6; }
-  /* line 92, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 58, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--link a:visited {
     color: #a6a6a6; }
-  /* line 95, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 61, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--link a:hover {
     color: #cccccc; }
-/* line 100, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+/* line 66, ../../../sass/layouts/sword-front/sword-front.layout.scss */
 .l-region--link .block__content .field__item {
   display: inline-block;
   margin: 8px; }
