--- a/sites/all/themes/gxnulib/sass/gxnulib.styles.scss
+++ b/sites/all/themes/gxnulib/sass/gxnulib.styles.scss
@@ -1,7 +1,7 @@
 // Import external libraries.
 @import "compass";
 @import "breakpoint";
-@import "susy";
+@import "singularitygs";
 @import "toolkit";
 
 // Import variables, abstractions, base styles and components using globbing.
