--- a/sites/all/themes/gxnulib/sass/base/_typography.scss
+++ b/sites/all/themes/gxnulib/sass/base/_typography.scss
@@ -118,7 +118,7 @@ mark,
  * $FOOTERS
  */
 footer,
-.footer {
+.l-footer {
     padding: $vert-spacing-unit 0;
     margin: 0 auto;
     
@@ -136,7 +136,7 @@ footer,
 /**
  * $BARS
  */
-.bar {
+.l-bar {
     padding: 0.1em 0.5em;
     
     background: $dark-grey;
@@ -150,6 +150,38 @@ footer,
         &:hover {
             color: $silver;
         }
+    }
+}
+
+/**
+ * $USERFUL LINKS
+ */
+.l-useful-link {    
+    text-align: center;
+    @include font-size(12px);
+    color: $lighter-grey;
+    
+    a {
+        color: $lighter-grey;
+        &:visited {
+            color: $lighter-grey;
+        }
+        &:hover {
+            color: $silver;
+        }     
+    }
+}
+
+/**
+ * $COPYRIGHT
+ */
+.l-copyright {
+    text-align: center;
+    @include font-size(12px);
+    color: $light-grey;
+    
+    a {
+        color: $light-grey;
     }
 }
 
