--- a/sites/all/themes/gxnulib/sass/components/fields/_bar-link.scss
+++ b/sites/all/themes/gxnulib/sass/components/fields/_bar-link.scss
@@ -4,15 +4,12 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : Apr 10, 2015, 9:29:25 AM
+    Created on : Apr 20, 2015, 9:03:33 PM
     Author     : Stephen
 */
-
-/**
- * $SITE-BRANDINGS
- */
-.site-branding {
-    padding: $vert-spacing-unit 0;
-    text-align: center;
-    @include clearfix;
+.l-bar {
+    .field__item {
+        display: inline-block;
+        margin: 0.5em;
+    }
 }
